Revision history for Test-Aggregate

0.364  04/12/2010
        - Allow skipping the rest of a test using
            plan skip_all => $reason

0.363  24/11/2009
        - Pass current test name to setup and teardown.

0.362  17/11/2009
        - Removed broken "check_plan" from Test::Aggregate.  It was always
          dodgy and really doesn't contribute much and the latest release
          broke with 'no_plan'.  We now warn if we see this.
        - Minimum Test::More is now 0.94.  This gives us more robust nested
          TAP.

0.361   20/10/2009
        - Keep Makefile.PL in synch.  Reported by Andreas Koenig
          (https://rt.cpan.org/Ticket/Display.html?id=50673)

0.36    18/10/2009
        - Mark for production.
        - Removed 'dump.t' files in tests.
        - Improve Test::Aggregate::Nested docs.
        - Removed some dead code.
        - Suppress multiple plans (#48352, Chisel Wright)

0.35_07 19/08/2009
        - Added missing files to MANIFEST.

0.35_06 28/06/2009
        - Added support for nested TAP via Test::Aggregate::Nested.
        - I really, really need to get a real release out.

0.35_05 20/05/2009
        - Removed bogus test file throwing my counts off.  No wonder all tests
          were failing for people!
        - Remove development lib links.

0.35_04 Unreleased.
        - Unlink dump files in tests.

0.35_03 15/05/2009
        - Don't run done_testing() in tests if it doesn't exist.

0.35_02 14/05/2009
        - Deprecate tests run in BEGIN/END/CHECK/INIT.
          See http://use.perl.org/~Ovid/journal/38974 for more information.
        - check_plan, if set, is now done at the end of each test instead of
          the end of all tests.
        - Make it work with the Test::Builder 0.88 and previous versions.
        - Embed the calling test script name in a comment at the top of the
          dump file.
        - Fix a doc typo (thanks to Offer Kaye for the report)
        - Cleaned up some tests.

0.35_01 18/11/2008